devops/k8s/vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: chainmgr
  namespace: humun-core-crypto
spec:
  hosts:
  - "humun-chainmgr.lestak.sh"
  gateways:
  - istio-system/ingressgateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: chainmgr
        port:
          number: 9988
